# computational_photography

./: .clang-format  .gitignore
1/: CMakeLists.txt  main.cpp  report.docx
2/: CMakeLists.txt  CMakePresets.json  exposure_times.csv  main.cpp
2/LDR_image_sequence/: curve.m  exposure_times.csv
